Fix OpenJSSE module config
Avoids

```
java.lang.ExceptionInInitializerError: Exception java.lang.IllegalAccessError: class org.openjsse.sun.security.ssl.SSLLogger (in unnamed
module @0x58cbafc2) cannot access class sun.security.action.GetPropertyAction (in module java.base) because module java.base does not export sun.security.action to
unnamed module @0x58cbafc2 [in thread "Test worker"]
```